HEARTH-459 fix viewport on tablet horizontal

--- a/app/app/styles/_settings.scss
+++ b/app/app/styles/_settings.scss
@@ -174,18 +174,21 @@ $off-canvas-label-border-top: none !default;
 // =================================================
 
 
-$small-breakpoint:  em-calc(640)  !default;
-$medium-breakpoint: em-calc(960) !default;
-$large-breakpoint:  em-calc(1440) !default;
-$xlarge-breakpoint: em-calc(1920) !default;
+$small-breakpoint:  em-calc(760px);
+$medium-breakpoint: em-calc(960px);
+$large-breakpoint:  em-calc(1440px);
+$xlarge-breakpoint: em-calc(1920px);
 
-$small-range:   (0, $small-breakpoint) !default; /* 0, 640px */
-$medium-range:  ($small-breakpoint  + em-calc(1), $medium-breakpoint) !default; /* 641px, 960 */
-$large-range:   ($medium-breakpoint + em-calc(1), $large-breakpoint)  !default; /* 961px, 1440px */
-$xlarge-range:  ($large-breakpoint  + em-calc(1), $xlarge-breakpoint) !default; /* 1441px, 1920px */
-$xxlarge-range: ($xlarge-breakpoint + em-calc(1), em-calc(99999999)) !default; /* 1921px, ... */
+
+
+$small-range:   (0, $small-breakpoint); /* 0, 640px */
+$medium-range:  ($small-breakpoint  + em-calc(1), $medium-breakpoint); /* 641px, 960 */
+$large-range:   ($medium-breakpoint + em-calc(1), $large-breakpoint); /* 961px, 1440px */
+$xlarge-range:  ($large-breakpoint  + em-calc(1), $xlarge-breakpoint); /* 1441px, 1920px */
+$xxlarge-range: ($xlarge-breakpoint + em-calc(1), em-calc(99999999)); /* 1921px, ... */
 $screen: "only screen";
 $small-up: $screen;
+
 $small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})";
 $small-down: "#{$screen} and (max-width:#{upper-bound($small-range)})";
 $medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
@@ -193,3 +196,4 @@ $medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max
 $medium-down: "#{$screen} and (max-width:#{upper-bound($medium-range)})";
 $large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
 $large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})";
+
